# test_workflows_shared

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.toml  file.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run-test-workflow.sh  stages.py  test.py  workflow.py
.github/: dependabot.yml  renovate-config.json
.github/workflows/: lint.yaml  sbom.yaml  security.yaml
cpg_flow_test/: config.toml  run-test-workflow.sh  stages.py  workflow.py
cpg_flow_test/configs/: default_config.toml  test_umbrella.toml
cpg_flow_test/jobs/: __init__.py  build_pyramid.py  cumulative_calc.py  filter_evens.py  first_n_primes.py  iterative_digit_sum.py  parse_pyramid.py  say_hi.py
jobs/: __init__.py  build_pyramid.py  cumulative_calc.py  filter_evens.py  first_n_primes.py  iterative_digit_sum.py
