[project]
name = "test-workflows-shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "analysis-runner>=3.2.2",
    "cpg-flow~=1.2",
    "cpg-utils>=5.4",
    "hail>=0.2.137",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pip-audit>=2.7.3",
    "pre-commit>=4.0.1",
    "pip-tools>=7.4.1",
]

[project.urls]
Repository = "https://github.com/populationgenomics/test_workflows_shared"

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]  # DoS risk pre 65.5.1
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cpg_flow_test"]

[tool.ruff]
line-length = 120

extend-exclude = ["venv", ".mypy_cache", ".tox", ".venv", "build", "dist"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# ignore pydocstyle, flake8-boolean-trap (FBT)
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "ERA",
    "EXE",
    "ICN",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "UP",
    "YTT",
]

fixable = ["ALL"]

ignore = [
    "ANN201",  # Missing return type annotation for public function
    "ANN204",  # Missing type annotation for special method `__init__`
    "G004",    # Logging statement uses f-string
    "Q000",    # Single quotes found but double quotes preferred
    "PLR2004", # Magic value used
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "hail", "cpg", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
cpg = ["metamist", "cpg_flow", "cpg_utils"]
hail = ["hail", "hailtop"]
